:wrench: CI with Travis new config.