@@ -1,16 +1,7 @@
-FROM debian:latest
+FROM openjdk:8-jdk-alpine
 
-VOLUME /tmp
+VOLUME /tmp 
 
-EXPOSE 8080
-EXPOSE 5432
-EXPOSE 5000
-EXPOSE 3000
+ARG JAR_FILECOPY ./${JAR_FILE} app.jar
 
-
-COPY /target/springsampling-0.0.1-SNAPSHOT.jar springsampling-0.0.1-SNAPSHOT.jar
-
-RUN bash -c 'touch /springsampling-0.0.1-SNAPSHOT.jar'
-
-#ENTRYPOINT ["java", "-jar", "springsampling-0.0.1-SNAPSHOT.jar"]
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/springsampling-0.0.1-SNAPSHOT.jar"]
+ENTRYPOINT ["java", "-Djava.security.egd=file:/dev/./urandom", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar", "/app.jar"]
